# video-knowledge-extractor

./: .gitignore  CI_FAILURE_ANALYSIS.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  kl.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: sample.srt
scripts/: dev-check.sh
src/: api.py  cli.py  clustering.py  export.py  fusion.py  llm_client.py  parallel.py  srt_parser.py  workflow.py  workflow_monitor.py
tests/: bdd_runner.py
tests/features/: knowledge_extraction.feature
