[project]
name = "video-knowledge-extractor"
version = "0.1.0"
description = "从视频字幕提取结构化知识"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4.22", "sentence-transformers>=2.2.0"]
export = ["ebooklib>=0.18", "markdown>=3.5.0"]
full = ["chromadb", "sentence-transformers", "ebooklib", "markdown", "weasyprint>=60.0"]

[project.scripts]
kl = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
